[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pixienews"
version = "1.0.0"
description = "AI News Bot - Scrapes AI news by country and delivers via WhatsApp"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "PixieNews Team" }]
keywords = ["ai", "news", "whatsapp", "scraper", "bot"]

dependencies = [
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "feedparser>=6.0.0",
    "websocket-client>=1.6.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
    "apscheduler>=3.10.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "ruff>=0.1.0"]

[project.scripts]
pixienews = "pixienews.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"
